# Skport_Signin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-TW.md  SECURITY.md  capture_session.bat  capture_session.py  configure_sites.py  install_efcheck.bat  package_windows_release.ps1  prepare_public_repo.bat  prepare_public_repo.ps1  pyproject.toml  register_logon_task.bat  register_logon_task.ps1  run_signin.bat  setup_windows.bat  sign_in.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
config/: settings.example.json
docs/: packaging.md  release.md  repo-metadata.md
efcheck/: __init__.py  attendance_response.py  attendance_state.py  browser_helpers.py  config.py  daily_gate.py  default_settings.py  notifications.py  result_helpers.py  statuses.py
efcheck/commands/: configure_sites.py  init.py  run.py
packaging/: package_release.ps1
skport_signin/: __init__.py  daily_gate.py  default_settings.py  file_io.py  runtime.py
skport_signin/commands/: capture_session.py  configure_sites.py  run.py
tests/: test_app_paths.py  test_attendance_response.py  test_attendance_state.py  test_browser_helpers.py  test_capture_session.py  test_cli.py  test_config.py  test_configure_sites.py  test_daily_gate.py  test_doctor.py  test_notifications.py  test_packaging.py  test_release_docs.py  test_result_helpers.py  test_setup_scripts.py  test_sign_in.py  test_smoke_cli.py
tools/: package_windows_release.ps1
