[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skport-signin"
version = "0.3.1"
description = "Windows-first Skport_Signin helper for Endfield and Arknights."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "mimi-labs124" }
]
dependencies = [
  "playwright>=1.58,<2",
  "tzdata>=2025.2",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.14,<7",
  "ruff>=0.12,<0.13",
]

[project.scripts]
skport_signin = "skport_signin.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["skport_signin", "skport_signin.*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

